--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,3 +1,7 @@
 <% provide(:title, "About") %>
-<h1>使い方</h1>
-<p>Find me in app/views/static_pages/about.html.erb</p>
+
+<div class="center jumbotron">
+  <h1 class="display-3">使い方</h1>
+  <p>Find me in app/views/static_pages/about.html.erb</p>
+
+</div>
