--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,3 +1,7 @@
 <% provide(:title, "Home") %>
-<h1>溝上研究室書籍DB</h1>
-<p>Find me in app/views/static_pages/home.html.erb</p>
+
+<div class="center jumbotron">
+  <h1 class="display-3">溝上研究室書籍DB</h1>
+  <p>Find me in app/views/static_pages/home.html.erb</p>
+  <%= link_to "書籍検索へ", "#", class: "btn btn-lg btn-primary" %>
+</div>
