--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -3,5 +3,6 @@
 <div class="center jumbotron">
   <h1 class="display-3">溝上研究室書籍DB</h1>
   <p>Find me in app/views/static_pages/home.html.erb</p>
-  <%= link_to "書籍検索へ", "#", class: "btn btn-lg btn-primary" %>
+  <%= link_to "書籍登録へ", books_new_path, class: "btn btn-lg btn-success" %>
+  <%= link_to "書籍一覧へ", books_new_path, class: "btn btn-lg btn-primary" %>
 </div>
