--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -9,8 +9,23 @@
 
 body {
   padding-top: 60px;
+
 }
 
+.jumbotron{
+  h1{
+    color: #eaeaea;
+  }
+  .namebox{
+    margin-top: 13%;
+  }
+  .display-3{
+    margin-bottom: 5%;
+  }
+  width: 100%;
+  height: 500px;
+  background-image: url("/back.jpg");
+}
 section {
   overflow: auto;
 }
