--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,8 +1,9 @@
 <% provide(:title, "Home") %>
 
 <div class="center jumbotron">
-  <h1 class="display-3">溝上研究室書籍DB</h1>
-  <p>Find me in app/views/static_pages/home.html.erb</p>
-  <%= link_to "書籍登録へ", books_new_path, class: "btn btn-lg btn-success" %>
-  <%= link_to "書籍一覧へ", books_new_path, class: "btn btn-lg btn-primary" %>
+  <div class="namebox">
+    <h1 class="display-3">VisionLab Library</h1>
+    <%= link_to "書籍登録へ", new_book_path, class: "btn btn-lg btn-success" %>
+    <%= link_to "書籍一覧へ", books_path, class: "btn btn-lg btn-primary" %>
+  </div>
 </div>
