--- a/app/assets/stylesheets/books.scss
+++ b/app/assets/stylesheets/books.scss
@@ -77,16 +77,37 @@ input {
 
 /* index */
 .tana{
-  background-image: url("/tana.jpg");
+
 }
 .books{
-  li{
-    list-style: none;
-    padding-top: 10px;
+  display: flex;
+  flex-wrap: wrap;
+
+  .book{
+    position:relative;
+    margin-top: 10px;
+    width: 270px;
+    height: 220px;
+    text-align: center;
+    bottom: 0;
+    .bookcontainer{
+      position: absolute;
+      bottom: 0;
+      left:0;
+      right:0;
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+      p{
+        white-space: nowrap;
+      }
+    }
   }
+
   p{
     color: white;
   }
+
 }
 
 
