--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,6 +4,8 @@
     <nav>
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to "Home",   root_path %></li>
+        <li><%= link_to "書籍登録",   new_book_path %></li>
+        <li><%= link_to "書籍一覧",   books_path %></li>
         <li><%= link_to "About",   about_path %></li>
       </ul>
     </nav>
